k8s-modified/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  annotations:
    cloud.google.com/backend-config: '{"default": "server-backend-config"}'
spec:
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
